--- a/app/view_templates/product/partials/product_update_form.html
+++ b/app/view_templates/product/partials/product_update_form.html
@@ -3,7 +3,13 @@
             <input type="text" class="form-control" id="thumbnail" name="thumbnail" value="{{ product.thumbnail }}" required>
         </td>
         <td><input type="hidden" class="form-control" id="id" name="id" value="{{ product.id }}"></td>
-        <td><input type="number" class="form-control" id="categoey_id" name="category_id" value="{{ product.category_id }}" required></td>
+        <td><select name="category_id">
+            <optgroup label="Categories">
+                {% for category in categories %}
+                    <option value="{{ category_id }}">{{ category.name.data }} </option>
+                {% endfor %}
+            </optgroup>
+        </select></td>
         <td><input type="text" class="form-control" id="title" name="title" value="{{ product.title }}" required></td>
         <td><input type="text" class="form-control" id="description" name="description" value="{{ product.description }}" required></td>
         <td><input type="number" class="form-control" id="stock" name="stock" value="{{ product.stock }}" required></td>
